--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,16 +1,10 @@
 <h3>Mongo Scraper</h3>
 
-<ul>
-  {{#each wishes}}
-  	<li>
-  	   <p>ID: {{this.id}}</p>
-       <p>Wish: {{this.wish}}</p>
-  	</li>
-  {{/each}}
-</ul>
+<a href="/scrape" class="btn">Scrape</a>
+<a href="/clear" class="btn">Clear</a>
 
-<form action="/" method="POST">
-	<textarea type="text" name="wish"></textarea>
-
-	<button type="submit">Submit</button>
-</form>
+{{#each articles}}
+<p>Title: {{this.title}}</p>
+<p>Link: {{this.link}} </p>
+<p>Author: {{this.author}}</p>
+{{/each}}
